--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,7 @@
 body{
     overflow-x: hidden;
 }
+#imageContainer{
+    transition: transform linear 0.1s;
+    transform: translate(-50%,-50%) scale(0);
+}
